Uniendo la logica de los patrones, reacomodando un poco la logica, corrijo detalles, cambie el consultar para que simule un poco la diferencia de servicios, reacomodo el readme separo en el main un metodo solo para que imprima resultados moviendo los urls de la fachada al StreamingService